Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/{setup.c, setup.h, parse.c}, doc/{hmrc.html, hmrc.4}
	max_attachments_per_msg new configuration option to limit
	the number of attachments we want to parse for messages.
	See hmrc.html, hmrc.4 or hypermail -v for more info.

	* src/{parse.c, string.c, proto.h}
	Some malformed messages could insert a \r followed by some
	text between the Content-Type or Content-Type parameters,
	their values and the end of the line or the ';'. Hypermail
	now detects these values and filters them out.

	* src/mail.c libcgi configure.ac Makefile.in src/Makefile.in
	Purged the years old deprecated mail script and its associated
	libraries. Althought the script itself had been disabled
	by code changes, its code base was still being built and
	distributed with hypermail, even if it did nothing anymore.

	* src/{hypermail.c, print.c, setup.c, setup.h}
	When reading a multi-message mbox that is made only of messages that
	are annotated as 'spam' or 'deleted', hypermail will now print
	an "empty archive" notice in all the generated indices. You can
	customize the markup and text of that notice with the
	'empty_archive_notice' configuration option.
	Note that this behavior is disabled when calling hypermail with the -u
	option (upgrade existing archive).

	* src/getdate.y
	Fixed bison warning "POSIX yacc reserves %type to nonterminals [-Wyacc]"
	by adapting the solution proposed for kerberos5:
	https://github.com/krb5/krb5/commit/0108d7d7fbb1111c062ac580e69e97103662fc2b

	* many files
	To prune out potential errors and portability issues, compiled
	hypermail with the gcc flags here belowed and removed most of the
	compiler warnings. The few ones that remain are mostly implicit
	declaration of functions fileno(), symlink(), and lstat() whose
	prototypes have switched between glib and posix and 'const' qualifier