@@ -6,6 +6,12 @@ HYPERMAIL VERSION 3.0.0
 ============================
 
 2023-00-00 Jose Kahan
+	* src/{string.c, proto.h, struct.c, parse.c}
+	When parsing message headers having DOS-style line
+	endings ('\r\n'), the '\r' was not being dropped in most
+	of the headers. Expanded the solution proposed in PR#98
+	closes #95
+
 	* src/{setup.c, setup.h, parse.c}, doc/{hmrc.html, hmrc.4}
 	max_attachments_per_msg new configuration option to limit
 	the number of attachments we want to parse for messages.
@@ -73,6 +79,12 @@ HYPERMAIL VERSION 3.0.0
 
 	* src/string.c
 	fixed a memory leak after calling obfuscated_email_address()
+
+2023-05-12 @vandys (Andy Valencia)
+	* src/struct.c
+	spamify() was being systematically applied even if
+	spamprotect was disabled
+	PR#97
 
 2023-05-12 @vandys (Andy Valencia)
 	* src/struct.c
